# oi_tests

./: pyproject.toml
tests/: conftest.py
tests/homepage/: test_blog.py  test_carousel.py  test_contato.py  test_header-footer.py  test_highlights.py  test_navbar.py  test_our_solutions.py
