[tool.poetry]
name = "oi_tests"
version = "0.1.0"
description = ""
authors = ["Jady Godoi <jady.s.m@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
selenium = "^4.22.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
taskipy = "^1.13.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"


[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'poetry run python'
pre_test = 'task lint'
test = 'pytest -s -vv'
test_to_error = 'pytest -s -x -vv'
post_test = 'coverage html'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
